@@ -11,6 +11,7 @@ Change log next version
 * You no longer need to prepare system classes that are not final and whose methods are not static, final or native in a special way (by prepare the class calling the system class method) (issue 300).
 * Added method "defaultConstructorIn" to the MemberMatcher API so that you can e.g. suppress a default constructor using suppress(defaultConstructorIn(SomeClass.class)) (issue 302).
 * PowerMock now cleans up EasyMock state after each test case which significantly decreases memory consumption.
+* PowerMock now cleans up most Mockito state after each test case which decreases memory consumption.
 
 Change log 1.4.6 (2010-10-13)
 -----------------------------
